- flex fix for wrapping tables

--- a/tournament-manager-fe/src/components/tableCompetitorSelector/tableCompetitorSelector.scss
+++ b/tournament-manager-fe/src/components/tableCompetitorSelector/tableCompetitorSelector.scss
@@ -16,5 +16,6 @@
 
     .table-competitor-selector_tables {
         display: flex;
+        flex-wrap: wrap;
     }
 }
